--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -23,7 +23,7 @@
   --cyan: #17a2b8;
   --white: #fff;
   --gray: #6c757d;
-  --gray-dark: #343a40;
+  --gray-dark: #7d4429;
   --primary: #8ca9ba;
   --secondary: #95421a;
   --success: #28a745;
