--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -9845,5 +9845,5 @@ form .row:first-child .floating-label-form-group {
 }
 
 .copyright {
-  background-color: #7d4429;
+  background-color: #5f2f17;
 }
